petit changement pour être compatible avec java 11